assets/components/src/text-control/style.scss
/**
 * Text Control
 */

@import '../../../shared/scss/muriel-component';
@import '~@wordpress/base-styles/colors';

.newspack-text-control {
	color: $dark-gray-300;
	font-size: 14px;
	line-height: 24px;
	margin: 32px 0;

	label {
		color: $dark-gray-900;
		font-size: inherit;
		font-weight: bold;
		line-height: inherit;
		margin: 0;
	}

	input[type="date"],
	input[type="datetime-local"],
	input[type="datetime"],
	input[type="email"],
	input[type="month"],
	input[type="number"],
	input[type="password"],
	input[type="search"],
	input[type="tel"],
	input[type="text"],
	input[type="time"],
	input[type="url"],
	input[type="week"] {
		background: white;
		border: 1px solid $light-gray-500;
		border-radius: 3px;
		box-shadow: none;
		color: inherit;
		font-size: inherit;
		line-height: inherit;
		margin: 0;
		min-height: 48px;
		padding: 11px 8px;
		transition: border-color 125ms ease-in-out, box-shadow 125ms ease-in-out;
		width: 100%;

		&:focus {
			border-color: $primary_color_darker;
			box-shadow: 0 0 0 2px $primary_color;
		}

		&:disabled,
		&.disabled {
			border-color: $light-gray-200;
			color: $light-gray-900;
			cursor: not-allowed;
		}
	}

	// Multiple Text Controls

	& + & {
		margin-top: -16px;
	}

	// Reset

	.components-base-control__field,
	.components-base-control__label {
		display: block;
		margin: 0;
	}
}

